--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@ionic/vue-router": "^6.0.0",
     "@types/uuid": "^9.0.0",
     "@vueuse/core": "^9.6.0",
+    "bootstrap": "^5.3.0",
     "core-js": "^3.6.5",
     "pinia": "^2.0.27",
     "register-service-worker": "^1.7.2",
