--- a/package.json
+++ b/package.json
@@ -39,8 +39,11 @@
     "@ionic/vue-router": "^6.0.0",
     "@types/uuid": "^9.0.0",
     "@vueuse/core": "^9.6.0",
+    "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
+    "cheerio": "^1.0.0-rc.12",
     "core-js": "^3.6.5",
+    "moment": "^2.29.4",
     "pinia": "^2.0.27",
     "register-service-worker": "^1.7.2",
     "uuid": "^9.0.0",
