--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "core-js": "^3.6.5",
     "moment": "^2.29.4",
     "pinia": "^2.0.27",
+    "primeflex": "^3.3.1",
+    "primevue": "^3.29.2",
     "register-service-worker": "^1.7.2",
     "uuid": "^9.0.0",
     "vue": "^3.2.21",
