--- a/package.json
+++ b/package.json
@@ -43,9 +43,11 @@
     "bootstrap": "^5.3.0",
     "cheerio": "^1.0.0-rc.12",
     "core-js": "^3.6.5",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "pinia": "^2.0.27",
     "primeflex": "^3.3.1",
+    "primeicons": "^6.0.1",
     "primevue": "^3.29.2",
     "register-service-worker": "^1.7.2",
     "uuid": "^9.0.0",
@@ -56,6 +58,7 @@
     "@capacitor/cli": "4.0.1",
     "@types/jest": "^27.0.2",
     "@types/leaflet": "^1.9.0",
+    "@types/lodash": "^4.14.202",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
     "@vue/cli-plugin-babel": "~5.0.0-rc.1",
