--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "cheerio": "^1.0.0-rc.12",
     "core-js": "^3.6.5",
     "lodash": "^4.17.21",
-    "moment": "^2.29.4",
+    "moment": "^2.30.1",
     "pinia": "^2.0.27",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
@@ -59,6 +59,7 @@
     "@types/jest": "^27.0.2",
     "@types/leaflet": "^1.9.0",
     "@types/lodash": "^4.14.202",
+    "@types/moment": "^2.13.0",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
     "@vue/cli-plugin-babel": "~5.0.0-rc.1",
