--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "cheerio": "^1.0.0-rc.12",
     "core-js": "^3.6.5",
     "lodash": "^4.17.21",
+    "luxon": "^3.4.4",
     "moment": "^2.30.1",
     "pinia": "^2.0.27",
     "primeflex": "^3.3.1",
@@ -54,6 +55,7 @@
     "@types/jest": "^27.0.2",
     "@types/leaflet": "^1.9.0",
     "@types/lodash": "^4.14.202",
+    "@types/luxon": "^3.4.2",
     "@types/moment": "^2.13.0",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
