--- a/package.json
+++ b/package.json
@@ -44,10 +44,11 @@
     "pinia": "^2.0.27",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
-    "primevue": "^3.29.2",
+    "primevue": "^3.47.2",
+    "pull-refresh-vue3": "^0.3.1",
     "register-service-worker": "^1.7.2",
     "uuid": "^9.0.0",
-    "vue": "^3.2.21",
+    "vue": "^3.4.15",
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
